# nx

./: Cargo.toml  README.md  build.rs  flake.nix  package.nix
src/: cli.rs  config.rs  main.rs
src/actions/: build.rs  clean.rs  completions.rs  develop.rs  mod.rs  push.rs  revert.rs  sync.rs  update.rs
