[package]
name = "nx"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = { version = "4.5.47", features = ["unstable-dynamic"] }
dirs = "6.0.0"
duct = "0.13.7"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
